--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@ h3 {
   color: greenyellow;
   font-family: "Josefin Slab", "Helvetica";
   font-size: 15px;
+  text-align: center;
 }
 .navy {
   color: white;
